# zfs

./: configure.ac
config/: kernel-acl.m4  kernel.m4
include/linux/: xattr_compat.h
include/sys/: Makefile.am  zfs_acl.h  zfs_ioctl.h  zfs_vfsops.h  zpl.h  zpl_xattr.h
include/sys/fs/: zfs.h
man/man8/: zfs.8
module/zcommon/: zfs_prop.c
module/zfs/: zfs_ioctl.c  zfs_vfsops.c  zfs_vnops.c  zpl_inode.c  zpl_super.c  zpl_xattr.c
tests/zfs-tests/tests/functional/acl/: Makefile.am
